Adjusted Recent Issues bullets to align with subheader

--- a/starter-code/css/styles.css
+++ b/starter-code/css/styles.css
@@ -182,7 +182,7 @@ h1 {
     color: white;
     text-align: center;
     font-weight: bold;
-    letter-spacing: .75em;
+    letter-spacing: 2em;
     max-width: 100%;
     height: 10em;
     margin-top: 25em;
@@ -231,7 +231,7 @@ aside {
 }*/
 ul {
     color: rgb(74, 110, 112);
-    margin: 0em -1em;
+    margin: 0em 1.25em;
 }
 ul a {
     color: rgb(126, 166, 168);
